# Hypnosis

./: .gitignore  README.md  pyproject.toml
hypnosis/: __init__.py  core.py  stores.py
